--- a/index.html
+++ b/index.html
@@ -146,9 +146,13 @@
           секунд)
         </h2>
         <ul class="cards__list">
-          <h3 class="card__title title-decor">
-            5 простых (на самом деле не очень) советов
-          </h3>
+          <li>
+            <article class="card">
+              <h3 class="card__title title-decor">
+                5 простых (на самом деле не очень) советов
+              </h3>
+            </article>
+          </li>
           <li>
             <article class="card">
               <h3 class="card__title title-decor thin-text">
