--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           </li>
         </ul>
       </nav>
-      <h1 class="header__title"> no focus </h1>
-      <p class="header__description title-decor">Что делать, когда не можешь делать ничего
+      <h1 class="header__title">no focus</h1>
+      <p class="header__description title-decor">Что делать, когда не можешь делать ничего 
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо
       </p>
     </header>
@@ -56,7 +56,7 @@
         <h2 class="cards__title">Почему сосредоточиться так сложно</h2>
         <ul class="cards__list">
           <li>
-            <article class="card">
+            <article>
               <h3 class="card__title title-decor">Многозадачность</h3>
               <p class="card__text">
                 Особенно сложно сосредоточиться, когда задач много и все они —
@@ -68,7 +68,8 @@
                   href="https://dana.org/article/multicosts-of-multitasking/"
                   target="_blank"
                   rel="noopener"
-                  >выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах
+                  >выяснили</a
+                >, что мозгу тяжело концентрироваться даже на двух делах
                 одновременно. А когда в поле внимания попадает несколько важных
                 задач, организм паникует и выделяет кортизол и адреналин —
                 «гормоны стресса». Из-за этого мы работаем невнимательно:
@@ -77,7 +78,7 @@
             </article>
           </li>
           <li>
-            <article class="card">
+            <article>
               <h3 class="card__title title-decor">Дофамин</h3>
               <p class="card__text">
                 С гормонами стресса всё понятно, но дальше — ещё интереснее. В
@@ -98,7 +99,7 @@
         <h2 class="cards__title">Что снижает концентрацию внимания?</h2>
         <ul class="cards__list cards-list_horizontal">
           <li>
-            <article class="card">
+            <article>
               <h3 class="card__title title-decor">Многозадачность</h3>
               <p class="card__text">
                 Как концентрация может снижаться из-за… концентрации? Любая
@@ -111,7 +112,7 @@
             </article>
           </li>
           <li>
-            <article class="card">
+            <article>
               <h3 class="card__title title-decor">Еда</h3>
               <p class="card__text">
                 «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
@@ -124,7 +125,7 @@
             </article>
           </li>
           <li>
-            <article class="card">
+            <article>
               <h3 class="card__title title-decor">Гаджеты</h3>
               <p class="card__text">
                 Да-да, это та самая ситуация, когда на экране ноутбука — код, в
@@ -145,19 +146,17 @@
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
-        <ul class="cards__list">
-          <li>
-            <article class="card">
-              <h3 class="card__title title-decor">
-                5 простых (на самом деле не очень) советов
-              </h3>
-            </article>
-          </li>
-          <li>
-            <article class="card">
-              <h3 class="card__title title-decor thin-text">
+        <article class="cards__list">
+          <div>
+            <h3 class="card__title title-decor">
+            5 простых (на самом деле не очень) советов
+            </h3>
+          </div>
+          <ul class="card">
+            <li>
+              <h4 class="card__title title-decor thin-text">
                 Представьте небо и облака
-              </h3>
+              </h4>
               <p class="card__text">
                 Или листья в ручье. Тут дело в лёгкой медитации, которая
                 помогает успокоиться. Ведь часто именно тревожные мысли о
@@ -168,22 +167,18 @@
                 денется. Это упражнение поможет вернуться в настоящий момент, а
                 не волноваться о потенциальных проблемах из будущего.
               </p>
-            </article>
-          </li>
-          <li>
-            <article class="card">
-              <h3 class="card__title title-decor thin-text">Включите музыку</h3>
+            </li>
+            <li>
+              <h4 class="card__title title-decor thin-text">Включите музыку</h4>
               <p class="card__text">
                 Но не любую, и не любимую. Любимая может быть связана с сильными
                 положительными эмоциями, которые тоже очень сильно отвлекают.
                 Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
                 попробовать включить плейлист с «белым шумом» или нейромузыкой.
               </p>
-            </article>
-          </li>
-          <li>
-            <article class="card">
-              <h3 class="card__title title-decor thin-text">Прогуляйтесь</h3>
+            </li>
+            <li>
+              <h4 class="card__title title-decor thin-text">Прогуляйтесь</h4>
               <p class="card__text">
                 Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
                 <a
@@ -191,18 +186,17 @@
                   href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
                   target="_blank"
                   rel="noopener"
-                  >показал</a>, что созерцание природы повышает концентрацию, в то время как
+                  >показал</a
+                >, что созерцание природы повышает концентрацию, в то время как
                 после просмотра городских пейзажей она наоборот понижается.
                 Можно совместить прогулку с физическими упражнениями или бегом —
                 так в мозг поступит ещё больше кислорода и он будет лучше
                 работать. Но и простая двадцатиминутная прогулка — тоже отличный
                 вариант.
               </p>
-            </article>
-          </li>
-          <li>
-            <article class="card">
-              <h3 class="card__title title-decor thin-text">Хорошо ешьте</h3>
+            </li>
+            <li>
+              <h4 class="card__title title-decor thin-text">Хорошо ешьте</h4>
               <p class="card__text">
                 Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
                 которые препятствуют резким скачкам сахара в крови. Например, с
@@ -210,55 +204,53 @@
                 чечевица, фасоль), коричневый рис, хлеб из цельнозерновой
                 пшеницы.
               </p>
-            </article>
-          </li>
-          <li>
-            <article class="card">
-              <h3 class="card__title title-decor thin-text">Читайте</h3>
+            </li>
+            <li>
+              <h4 class="card__title title-decor thin-text">Читайте</h4>
               <p class="card__text">
                 Настоящие бумажные книги. Это правда помогает с концентрацией:
                 чтобы прочитать пост в соцсети, достаточно нескольких минут или
                 даже секунд. А вот интересная книга способна затянуть и на
                 несколько часов и круто тренирует направленное внимание.
               </p>
-            </article>
-          </li>
-        </ul>
+            </li>
+          </ul>
+        </article>
+      </section>
+      <section class="gallery">
+        <h3 class="card__title title-decor">А можно в картинках?</h3>
+        <img
+          class="gallery__img img_sunset"
+          src="./images/sunset.png"
+          alt="Яркий рисунок восхода солнца над горами"
+          loading="lazy"
+        />
+        <img
+          class="gallery__img img_ice-cream"
+          src="./images/ice-cream.png"
+          alt="Тарелка с шариками мороженного"
+          loading="lazy"
+        />
+        <img
+          class="gallery__img img_tape"
+          src="./images/tape.png"
+          alt="Кассета для старого магнитофона"
+          loading="lazy"
+        />
+        <img
+          class="gallery__img img_books"
+          src="./images/books.png"
+          alt="Стопка книжек на столе с чашкой сверху"
+          loading="lazy"
+        />
+        <img
+          class="gallery__img img_street"
+          src="./images/street.png"
+          alt="Городской пейзаж в сиреневых тонах"
+          loading="lazy"
+        />
       </section>
     </main>
-    <section class="gallery">
-      <h3 class="card__title title-decor">А можно в картинках?</h3>
-      <img
-        class="gallery__img img_sunset"
-        src="./images/sunset.png"
-        alt="Яркий рисунок восхода солнца над горами"
-        loading="lazy"
-      />
-      <img
-        class="gallery__img img_ice-cream"
-        src="./images/ice-cream.png"
-        alt="Тарелка с шариками мороженного"
-        loading="lazy"
-      />
-      <img
-        class="gallery__img img_tape"
-        src="./images/tape.png"
-        alt="Кассета для старого магнитофона"
-        loading="lazy"
-      />
-      <img
-        class="gallery__img img_books"
-        src="./images/books.png"
-        alt="Стопка книжек на столе с чашкой сверху"
-        loading="lazy"
-      />
-      <img
-        class="gallery__img img_street"
-        src="./images/street.png"
-        alt="Городской пейзаж в сиреневых тонах"
-        loading="lazy"
-      />
-    </section>
     <footer class="footer decorated-zone">
       <h2 class="footer__title">focus</h2>
     </footer>
